# dao_protocol

./: INTEGRATION_GUIDE.md  README.md  TDG_RUBRIC_HARDENING_IMPLEMENTATION.md  pyproject.toml  requirements-server.txt  submit_elizabeth_wong_sales.py  submit_soha_david_campbell_sales.py
.github/workflows/: npm-publish-dao-client.yml  npm-token-health.yml  pypi-publish-dao-client.yml
.venv-test/: pyvenv.cfg
credentials/kimi-moon/: README.md
examples/: bulk_qr_sales_template.py
examples/attestation-trees/: butterfly-effect.yaml
examples/onboarding/: wayne-ux-app.yaml
scripts/: process_repackaging_settlement.py  run_beta_e2e.sh
tests/: test_beta_sandbox_e2e.py  test_bugsnag.py  test_config.py  test_cors.py  test_dao.py  test_dao_signature.py  test_deferred_gaps.py  test_email_registration.py  test_order_sync.py  test_proxy.py  test_qr_code_check.py  test_query.py  test_report_ai_agent_contribution_evidence.py  test_report_contribution_tdg.py  test_rubric.py  test_shipping.py  test_tracking.py  test_verify.py
truesight_dao_client/: __init__.py  edgar_client.py  report_contribution_review.py  rubric.py  validators.py
truesight_dao_client/cache/: contributors.py
truesight_dao_client/modules/: add_contributor.py  add_partner.py  batch_qr_generator.py  check_in_partner.py  create_proposal.py  define_currency.py  link_attestations_to_trees.py  mint_donation.py  notarize.py  onboard_partner.py  ping_sophia.py  post_repackaging_cleanup.py  register_qr_code.py  report_ai_agent_contribution.py  report_asset_receipt.py  report_capital_injection.py  report_contribution.py  report_currency_conversion.py  report_dao_expenses.py  report_inventory_movement.py  report_program_registration.py  report_sales.py  review_proposal.py  update_qr_code.py
truesight_dao_client/server/: README.md  __init__.py  config.py  dedup.py  dispatch.py  email_registration.py  gas_upstreams.py  main.py  order_sync.py
truesight_dao_client/server/crypto/: __init__.py  verify.py
truesight_dao_client/server/data/: events_catalog.json
truesight_dao_client/server/deploy/: deploy.sh  truesight-dao-protocol.service
truesight_dao_client/server/jobs/: __init__.py  inventory_snapshot.py  webhook_trigger.py
truesight_dao_client/server/routes/: __init__.py  dao.py  design.py  events_catalog.py  health.py  proxy.py  qr_code_check.py  query.py  shipping.py  stripe_order_sync.py  stripe_subscription.py  subscription_obligation.py  tracking.py
truesight_dao_client/server/services/: __init__.py  easypost.py  github_upload.py  sandbox_sheet.py  stripe_client.py
truesight_dao_client/server/sheets/: __init__.py  base.py  contributors_digital_signatures.py  design_events_log.py  email_agent_drafts.py  inventory_movements.py  newsletter_emails.py  qr_code_lookup.py  qr_code_sales.py  qr_codes.py  stripe_checkout_log.py  subscription_fulfillment_queue.py  telegram_raw_log.py  transactions.py
truesight_dao_client/server/static/: index.html
truesight_dao_client/tests/: test_e2e_subscription_webhook.py  test_post_repackaging_cleanup.py
