[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truesight-dao-client"
version = "0.2.0"
description = "Python client and CLIs for TrueSight DAO / Edgar (edgar.truesight.me)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=41.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

# Server (dao_protocol FastAPI) dependencies live in requirements-server.txt — kept out of the
# base install so `pip install truesight-dao-client` stays lean (CLI only). Deploy the server with
# `pip install -e . -r requirements-server.txt`.

[project.urls]
Homepage = "https://github.com/TrueSightDAO/dao_protocol"

[project.scripts]
truesight-dao-auth = "truesight_dao_client.auth:main"
truesight-dao-ping-sophia = "truesight_dao_client.modules.ping_sophia:main"
truesight-dao-protocol-server = "truesight_dao_client.server.main:main"
truesight-dao-batch-qr-generator = "truesight_dao_client.modules.batch_qr_generator:main"
truesight-dao-create-proposal = "truesight_dao_client.modules.create_proposal:main"
truesight-dao-notarize = "truesight_dao_client.modules.notarize:main"
truesight-dao-register-farm = "truesight_dao_client.modules.register_farm:main"
truesight-dao-repackaging-planner = "truesight_dao_client.modules.repackaging_planner:main"
truesight-dao-report-ai-agent-contribution = "truesight_dao_client.modules.report_ai_agent_contribution:main"
truesight-dao-report-dapp-permission-change = "truesight_dao_client.modules.report_dapp_permission_change:main"
truesight-dao-report-capital-injection = "truesight_dao_client.modules.report_capital_injection:main"
truesight-dao-report-contribution = "truesight_dao_client.modules.report_contribution:main"
truesight-dao-report-contribution-review = "truesight_dao_client.report_contribution_review:main"
truesight-dao-add-contributor = "truesight_dao_client.modules.add_contributor:main"
truesight-dao-add-partner = "truesight_dao_client.modules.add_partner:main"
truesight-dao-report-asset-receipt = "truesight_dao_client.modules.report_asset_receipt:main"
truesight-dao-report-dao-expenses = "truesight_dao_client.modules.report_dao_expenses:main"
truesight-dao-report-inventory-movement = "truesight_dao_client.modules.report_inventory_movement:main"
truesight-dao-report-sales = "truesight_dao_client.modules.report_sales:main"
truesight-dao-report-tree-planting = "truesight_dao_client.modules.report_tree_planting:main"
truesight-dao-review-proposal = "truesight_dao_client.modules.review_proposal:main"
truesight-dao-scanner = "truesight_dao_client.modules.scanner:main"
truesight-dao-update-qr-code = "truesight_dao_client.modules.update_qr_code:main"
truesight-dao-withdraw-voting-rights = "truesight_dao_client.modules.withdraw_voting_rights:main"
truesight-dao-cache-freight = "truesight_dao_client.cache.freight:main"
truesight-dao-cache-treasury = "truesight_dao_client.cache.treasury:main"
truesight-dao-cache-compositions = "truesight_dao_client.cache.compositions:main"
truesight-dao-cache-contributors = "truesight_dao_client.cache.contributors:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["truesight_dao_client*"]
